--- a/loginSignupExample/app/src/main/res/values/strings.xml
+++ b/loginSignupExample/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">LoginSignupExample</string>
     <string name="hello_welcome_back">Welcome back!</string>
     <string name="title_description">Hello, you must login first to be able to use the application and enjoy all the features of Calashop.</string>
+
+    <string-array name="country">
+        <item>Nepal</item>
+        <item>India</item>
+        <item>China</item>
+
+    </string-array>
 </resources>
